fixed spacing issue on home pages

--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ Tags: custom-background, custom-colors, custom-menu, editor-style, responsive-la
 .hentry {
 	margin: 0 auto 100px;
 }
+.page-template-page_home .hentry {
+	margin: 0 auto;
+} 
 
 /*-----------------------------------------------
 ## Typography
